<resources>
    <string name="get_location">Get Location</string>
    <string name="disconnect">Disconnect Service</string>
    <string name="connect">Connect Service</string>
    <string name="app_name">FrkOut</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_id">1233454473345447</string>
    <string name="title_activity_splash_screen">SplashScreen Activity</string>
    <string name="title_activity_otp">OTP</string>
    <string name="title_activity_user_profile">Setup Your Profile</string>
    <string name="title_activity_google_sign_in">GoogleSignInActivity</string>
    <string name="title_activity_facebook_sign_in">FacebookSignInActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_broadcast">Broadcast</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_broadcast_activity_display">Display Broadcast</string>
    <string name="title_activity_surveys">Surveys</string>
    <string name="title_activity_broadcast_campaign">Campaign</string>
    <string name="title_activity_broadcast_audience">Audience</string>
    <string name="title_activity_broadcast_creative">Creative</string>
    <string name="title_activity_surveys_active">Active</string>
    <string name="title_activity_surveys_incomplete">Incomplete</string>
    <string name="title_activity_surveys_completed">Completed</string>
    <string name="title_activity_sms">SmsActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_Chat">CHAT</string>
    <string name="title_fragment_chatlist_followers">FOLLOWERS</string>
    <string name="title_fragment_chatlist_following">FOLLOWING</string>
    <string name="title_fragment_chatlist_brands">BRANDS</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_testing">Testing</string>
    <string name="action_settings">Settings</string>
    <string name="action_chatting">Chat</string>
    <string name="action_broadcasting">Broadcast</string>
    <string name="action_surveys">Surveys</string>
    <string name="action_surveys_active">Surveys Active</string>
    <string name="action_clear">Clear</string>
    <string name="action_submit">submit</string>
    <string name="action_takeImage">Take Image</string>
    <string name="action_ChooseImage">Choose Image</string>
    <string name="action_takeVideo">Take Video</string>
    <string name="action_ChooseVideo">Choose Video</string>
    <string name="title_activity_no_internet">No Internet Connection Detected</string>
    <string name="title_activity_login">Login Screen</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="clear">Clear Data Successfully</string>
    <string name="skip">SKIP</string>
    <string name="add">Add</string>
    <string name="add_more">Add More</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="submit">Submit</string>
    <string name="login_button">LOGIN</string>
    <string name="done">DONE</string>
    <string name="gender">Gender</string>
    <string name="location">Location</string>
    <string name="select_industry">Enter Industry</string>
    <string name="select_brand">Enter Brand</string>
    <string name="select_social">Enter Social</string>
    <string name="select_location">Enter Location</string>
    <string name="location_error">Unable to fetch location.</string>
    <string name="chat_msg_hint">Type a message</string>
    <string name="chat_msg_validation">Please Write Your Message</string>
    <string name="fb_title">WRITE FEEDBACK / REVIEW FOR ANY BRANDS / PRODUCTS / SERVICES</string>
    <string name="fb_desc_hint">What\'s on your mind ?</string>
    <string name="fb_desc_validation">Please Enter Your Valuable Feedback</string>
    <string name="fb_media_title">Want add some pictures</string>
    <string name="fb_add_media_title">Take a Pictures or Upload from your Gallery</string>
    <string name="fb_add_more_media_title">Want to add more Pictures</string>
    <string name="fb_cat_title">Add to Appropriate Category</string>
    <string name="fb_cat_desc">Choose to select</string>
    <string name="fb_cat_brand">Brands</string>
    <string name="fb_cat_social">Social</string>
    <string name="select_brand_validation">Please Enter Brand</string>
    <string name="select_social_validation">Please Enter Social</string>
    <string name="select_location_validation">Please Enter Location</string>
    <string name="fb_success_title">YOUR FEEDBACK / REVIEW HAS BEEN SUBMITTED SUCCESSFULLY</string>
    <string name="fb_sbm_title_val">Thank you for your feedback.</string>
    <string name="fb_sbm_desc_val">We appreciate that you’ve taken the time to write us.\nYour feedback is very important to us.</string>
    <string name="fb_sbm_err">Feedback Not Saved.\nPlease Try Again !!</string>
    <string name="campaign_validation">Please Select Your Campaign before moving on</string>
    <string name="target_user_validation">Please Select Your Target User before moving on</string>
    <string name="creative_validation">Please Select Your Creative before moving on</string>
    <string name="broad_camp_title">Broadcast Campaign</string>
    <string name="broad_camp_name">Campaign Name</string>
    <string name="broad_camp_name_validation">Please Enter Campaign Name</string>
    <string name="broad_camp_desc">Campaign Description</string>
    <string name="broad_camp_desc_validation">Please Enter Campaign Description</string>
    <string name="broad_camp_date">Campaign Date</string>
    <string name="broad_camp_date_validation">Please Select Campaign Date</string>
    <string name="broad_camp_save">Broadcast Campaign Saved Successfully</string>
    <string name="broad_aud_title">Broadcast Audience</string>
    <string name="broad_aud_agegroup">AgeGroup</string>
    <string name="broad_aud_agefrom">Age From</string>
    <string name="broad_aud_agefrom_validation">Please Enter Age From</string>
    <string name="broad_aud_ageto">Age To</string>
    <string name="broad_aud_ageto_validation">Please Enter Age To</string>
    <string name="broad_aud_addnewnloc">Add New Location</string>
    <string name="broad_aud_loc_title">Select Location</string>
    <string name="broad_aud_loc_country">Country</string>
    <string name="broad_aud_loc_spcountry">Select Country</string>
    <string name="broad_aud_loc_state">State (Optional)</string>
    <string name="broad_aud_loc_spstate">Select State</string>
    <string name="broad_aud_loc_district">District (Optional)</string>
    <string name="broad_aud_loc_spdistrict">Select District</string>
    <string name="broad_aud_loc_city">City (Optional)</string>
    <string name="broad_aud_loc_spcity">Select City</string>
    <string name="broad_aud_loc_location">Location (Optional)</string>
    <string name="broad_aud_loc_splocation">Select Location</string>
    <string name="broad_aud_save">Broadcast Audience Saved Successfully</string>
    <string name="broad_creative_title">What creative would you like to use in Broadcast ?</string>
    <string name="broad_creative_texttitle">Text creative</string>
    <string name="broad_creative_imagetitle">Image creative</string>
    <string name="broad_creative_videotitle">Video creative</string>
    <string name="broad_creative_creativetitle">Creative Title</string>
    <string name="broad_creative_creativetitle_validation">Please Enter Creative Title</string>
    <string name="broad_creative_creativedesc">Creative Description</string>
    <string name="broad_creative_creativedesc_validation">Please Enter Creative Description</string>
    <string name="broad_creative_imageupload">Upload Image</string>
    <string name="broad_creative_imagetake">Take Image</string>
    <string name="broad_creative_imageupload_validation">Please Select Image</string>
    <string name="broad_creative_videoupload">Upload Video</string>
    <string name="broad_creative_videotake">Take Video</string>
    <string name="broad_creative_videoupload_validation">Please Select Video</string>
    <string name="broad_creative_texthint">Type a message</string>
    <string name="close">&#xf00d;</string>
    <string name="broad_display_header">Display Broadcast</string>
    <string-array name="country_list">
        <item>Select Country</item>
        <item>India</item>
        <item>Australia</item>
    </string-array>
    <string-array name="state_list">
        <item>Select State</item>
        <item>Andaman and Nicobar Island</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Puducherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
    </string-array>
    <string name="nointernet_title">No Internet Connection Detected.</string>
    <string name="nointernet_desc">Please Check Your Internet Connection And Try Again.</string>
    <string name="tryagain">Try Again</string>
</resources>