<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:scrollbars="none">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtBroadCampTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/broad_camp_title" />

    <EditText
        android:id="@+id/etxtBroadCampName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtBroadCampTitle"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/broad_camp_name" />

    <EditText
        android:id="@+id/etxtBroadCampDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etxtBroadCampName"
        android:layout_marginBottom="5dp"
        android:maxLines="6"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/broad_camp_desc" />

    <TextView
        android:id="@+id/txtBroadCampDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etxtBroadCampDesc"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:focusableInTouchMode="false"
        android:hint="@string/broad_camp_date"/>

    <Button
        android:id="@+id/btnBroadCampSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtBroadCampDate"
        android:layout_centerHorizontal="true"
        android:text="@string/save"/>

</RelativeLayout>

</ScrollView>