<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerVertical="true">

    <ImageView
        android:id="@+id/imgNoInternet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/internet_connection"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/txtNoInternetTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgNoInternet"
        android:layout_centerInParent="true"
        android:layout_marginBottom="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nointernet_title" />

    <TextView
        android:id="@+id/txtNoInternetDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtNoInternetTitle"
        android:layout_centerInParent="true"
        android:layout_marginBottom="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nointernet_desc"
        android:gravity="center" />

    <Button
        android:id="@+id/btnTryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/tryagain"
        android:onClick="Tryagain"
        android:layout_below="@+id/txtNoInternetDesc" />

    </RelativeLayout>

</RelativeLayout>